Updated Java notation