@@ -13,7 +13,6 @@ import cps450.TinyParser.IntTermContext;
 import cps450.TinyParser.MulExprContext;
 import cps450.TinyParser.ParTermContext;
 import cps450.TinyParser.Read_stmtContext;
-import cps450.TinyParser.StmtContext;
 import cps450.TinyParser.TermExprContext;
 import cps450.TinyParser.Write_stmtContext;
 
@@ -37,7 +36,7 @@ public class TinyInterpreterListener extends TinyBaseListener {
 			System.out.print("Enter value for " + id + ":");
 			
 			String value = scanner.nextLine();
-			variables.put(id, new Double(value));
+			variables.put(id, Double.valueOf(value));
 		}
 	}
 
@@ -61,14 +60,14 @@ public class TinyInterpreterListener extends TinyBaseListener {
 		if (value == null) {
 			Token tok = (Token) ctx.ID().getPayload();
 			System.out.println("** WARNING: Undefined identifier " + id + " on Line " + tok.getLine());
-			value = new Double(0);
+			value = 0.0;
 		}
 		ctx.value = value;
 	}
 	
 	@Override
 	public void exitIntTerm(IntTermContext ctx) {
-		ctx.value = new Double(ctx.integer().getText());
+		ctx.value = Double.valueOf(ctx.integer().getText());
 	}
 	
 
@@ -83,13 +82,11 @@ public class TinyInterpreterListener extends TinyBaseListener {
 	public void exitAddExpr(AddExprContext ctx) {
 		Double value1 = ctx.e1.value;
 		Double value2 = ctx.e2.value;
-		if (ctx.add_op().getText().equals("+")) {			
-			ctx.value = value1 + value2;
-		} else if (ctx.add_op().getText().equals("-")) {
-			ctx.value = value1 - value2;
-		} else {
-			throw new RuntimeException("Unknown operator type: " + ctx.add_op().getText());
-		}
+            ctx.value = switch (ctx.add_op().getText()) {
+				case "+" -> value1 + value2;
+				case "-" -> value1 - value2;
+				default -> throw new RuntimeException("Unknown operator type: " + ctx.add_op().getText());
+			};
 	}
 
 	@Override
